--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^4.0.0",
+    "faunadb": "^4.6.0",
+    "handlebars": "^4.7.7",
     "next": "12.1.6",
+    "next-auth": "^4.7.0",
+    "nodemailer": "^6.7.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
@@ -19,6 +26,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "prisma": "^4.0.0",
     "typescript": "4.7.4"
   }
 }
