feat: Add image upload
Connected to AWS S3 bucket via custom api that takes the file and uploads it. Image is rendered from the S3 link.

Next steps:
- Possibly compress image BEFORE upload to make it go faster. If not possible, use lambda function that runs on upload and compresses images for future get requests and also makes images smaller to store.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,9 @@
     "pages/hello.js",
     "pages/_app.jsx",
     "pages/index.jsx",
-    "pages/login.js"
+    "pages/login.js",
+    "utils/customVerificationRequest.js",
+    "pages/api/auth/[...nextauth].js"
   ],
   "exclude": ["node_modules"]
 }
