--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
+    "aws-sdk": "^2.1166.0",
+    "axios": "^0.27.2",
     "faunadb": "^4.6.0",
+    "formidable": "^2.0.1",
+    "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
     "next": "12.1.6",
     "next-auth": "^4.7.0",
