--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "handlebars": "^4.7.7",
     "next": "12.1.6",
     "next-auth": "^4.7.0",
+    "next-s3-upload": "^0.2.2",
     "nodemailer": "^6.7.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
