feat: Add schemas via Prisma
schema.prisma now contains all the code to generate the tables to match the database structure mockup.
Switched from .env.local to .env to use DATABASE_URL with Prisma. For some reason it doesn't read env.local, might fix later.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     "pages/login.js",
     "utils/customVerificationRequest.js",
     "pages/api/auth/[...nextauth].js"
-  ],
+, "pages/api/s3/uploadFile.js"  ],
   "exclude": ["node_modules"]
 }
