refactor: Absolute imports
https://nextjs.org/docs/advanced-features/module-path-aliases

Refactored code to allow for absolute imports instead of relative nested ones (../../../component/example) -> (@/components/example)

Updated all components, pages, and scss to reflect this new change.

This makes the code a lot cleaner and allows me to move things around during development and not break any imports.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/partials/*": ["styles/partials/*"],
+      "@/utils/*": ["utils/*"]
+    },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -26,7 +32,8 @@
     "pages/index.jsx",
     "pages/login.js",
     "utils/customVerificationRequest.js",
-    "pages/api/auth/[...nextauth].js"
-, "pages/api/s3/uploadFile.js"  ],
+    "pages/api/auth/[...nextauth].js",
+    "pages/api/s3/uploadFile.js"
+  ],
   "exclude": ["node_modules"]
 }
