feat: Add favicon
Refactored some of the <Head> tags, now there is a global description page for SEO on the Layout component.

Each page has a custom title.

Favicon is global.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
       "@/components/*": ["components/*"],
       "@/partials/*": ["styles/partials/*"],
       "@/utils/*": ["utils/*"],
-      "@/hooks/*": ["hooks/*"]
+      "@/hooks/*": ["hooks/*"],
+      "@/public/*": ["public/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
