--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.7.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.33.1",
     "sass": "^1.53.0",
     "uuid": "^8.3.2"
