--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.33.1",
+    "react-modal": "^3.15.1",
     "sass": "^1.53.0",
     "uuid": "^8.3.2"
   },
