--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "next-s3-upload": "^0.2.2",
     "nodemailer": "^6.7.5",
     "react": "18.2.0",
+    "react-cropper": "^2.1.8",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.33.1",
+    "react-image-crop": "^10.0.4",
     "react-modal": "^3.15.1",
     "sass": "^1.53.0",
     "uuid": "^8.3.2"
