refactor: Styles file architecture
Moved style module.scss files out of components into @/styles/pages, and changed imports.

Previously, I had the styles for each page mixed in with the components. Each page would have their own folder inside of @/components/ with only a single module.scss file inside. This made it confusing to navigate.

This version provides more separation between the page and a component's styles.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["components/*"],
+      "@/styles/*": ["styles/*"],
       "@/partials/*": ["styles/partials/*"],
       "@/utils/*": ["utils/*"],
       "@/hooks/*": ["hooks/*"],
