--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "faunadb": "^4.6.0",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
-    "next": "12.1.6",
+    "next": "^12.3.0",
     "next-auth": "^4.9.0",
     "next-s3-upload": "^0.2.2",
     "nodemailer": "^6.7.5",
